# raytracer-rust

./: Cargo.toml
data/: scene.json
src/: lib.rs  main.rs  pixels.rs  renderer.rs
src/scene/: camera.rs  materials.rs  mod.rs
src/scene/object/: mod.rs
src/scene/object/colors/: mod.rs  normals.rs  texture.rs  uniform.rs
src/scene/object/materials/: dielectric.rs  diffuse.rs  light.rs  metal.rs  mod.rs  texture.rs  uniform.rs
src/scene/object/shapes/: half_space.rs  mod.rs  sky.rs  sphere.rs
src/scene/shapes/: mod.rs  sphere.rs
src/utils/: color.rs  hit.rs  mod.rs  point.rs  random.rs  ray.rs
