[package]
name = "raytracer-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "*"
image = "*"
indicatif = { version = "*", features = ["rayon"] }
itertools = "*"
palette = "*"
rand = "*"
rayon = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
serde_with = "*"
